--- a/src/business/business-gnome/glade/invoice.glade
+++ b/src/business/business-gnome/glade/invoice.glade
@@ -14,6 +14,7 @@
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="has_separator">True</property>
+  <signal name="destroy" handler="gnc_invoice_window_destroy_cb" last_modification_time="Sat, 19 Jul 2003 22:55:50 GMT"/>
 
   <child internal-child="vbox">
     <widget class="GtkVBox" id="dialog-vbox2">
@@ -27,38 +28,41 @@
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
 
 	  <child>
-	    <widget class="GtkButton" id="button4">
-	      <property name="visible">True</property>
-	      <property name="can_default">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="label">gtk-ok</property>
-	      <property name="use_stock">True</property>
-	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="response_id">0</property>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkButton" id="button5">
-	      <property name="visible">True</property>
-	      <property name="can_default">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="label">gtk-cancel</property>
-	      <property name="use_stock">True</property>
-	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="response_id">0</property>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkButton" id="button6">
+	    <widget class="GtkButton" id="helpbutton">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="label">gtk-help</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="response_id">0</property>
+	      <property name="response_id">-11</property>
+	      <signal name="clicked" handler="gnc_invoice_window_help_cb" last_modification_time="Sat, 19 Jul 2003 22:54:50 GMT"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkButton" id="cancelbutton">
+	      <property name="visible">True</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label">gtk-cancel</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="response_id">-6</property>
+	      <signal name="clicked" handler="gnc_invoice_window_cancel_cb" last_modification_time="Sat, 19 Jul 2003 22:55:04 GMT"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkButton" id="okbutton">
+	      <property name="visible">True</property>
+	      <property name="can_default">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="label">gtk-ok</property>
+	      <property name="use_stock">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="response_id">-5</property>
+	      <signal name="clicked" handler="gnc_invoice_window_ok_cb" last_modification_time="Sat, 19 Jul 2003 22:55:18 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -158,13 +162,15 @@
 			  <property name="visible">True</property>
 			  <property name="tooltip" translatable="yes">The invoice ID number.  If left blank a reasonable number will be chosen for you</property>
 			  <property name="can_focus">True</property>
+			  <property name="has_focus">True</property>
 			  <property name="editable">True</property>
 			  <property name="visibility">True</property>
 			  <property name="max_length">0</property>
 			  <property name="text" translatable="yes"></property>
 			  <property name="has_frame">True</property>
 			  <property name="invisible_char" translatable="yes">*</property>
-			  <property name="activates_default">False</property>
+			  <property name="activates_default">True</property>
+			  <signal name="changed" handler="gnc_invoice_id_changed_cb" last_modification_time="Sat, 19 Jul 2003 22:56:07 GMT"/>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
@@ -710,7 +716,6 @@
 
 		  <child>
 		    <widget class="GtkMenu" id="menu_file_menu">
-		      <property name="visible">True</property>
 
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_new_invoice">
@@ -721,10 +726,10 @@
 			  <signal name="activate" handler="gnc_invoice_window_new_invoice_cb"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="convertwidget5">
+			    <widget class="GtkImage" id="image1">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-new</property>
-			      <property name="icon_size">4</property>
+			      <property name="icon_size">1</property>
 			      <property name="xalign">0.5</property>
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">0</property>
@@ -743,10 +748,10 @@
 			  <signal name="activate" handler="gnc_invoice_window_new_account_cb"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="convertwidget6">
+			    <widget class="GtkImage" id="image2">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-new</property>
-			      <property name="icon_size">4</property>
+			      <property name="icon_size">1</property>
 			      <property name="xalign">0.5</property>
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">0</property>
@@ -765,8 +770,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_save">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-save</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_SAVE_ITEM</property>
 			  <signal name="activate" handler="gnc_main_window_file_save_cb"/>
 			</widget>
 		      </child>
@@ -774,8 +778,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_saveas">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-save-as</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_SAVE_AS_ITEM</property>
 			  <signal name="activate" handler="gnc_main_window_file_save_as_cb"/>
 			</widget>
 		      </child>
@@ -789,8 +792,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_print">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-print</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_PRINT_ITEM</property>
 			  <signal name="activate" handler="gnc_invoice_window_printCB"/>
 			</widget>
 		      </child>
@@ -804,8 +806,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_close">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-close</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_CLOSE_ITEM</property>
 			  <signal name="activate" handler="gnc_invoice_window_closeCB"/>
 			</widget>
 		      </child>
@@ -813,8 +814,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_exit">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-quit</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_EXIT_ITEM</property>
 			  <signal name="activate" handler="gnc_main_window_exit_cb"/>
 			</widget>
 		      </child>
@@ -831,13 +831,11 @@
 
 		  <child>
 		    <widget class="GtkMenu" id="menu_edit_menu">
-		      <property name="visible">True</property>
 
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_cut">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-cut</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_CUT_ITEM</property>
 			  <signal name="activate" handler="gnc_invoice_window_cut_cb"/>
 			</widget>
 		      </child>
@@ -845,8 +843,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_copy">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-copy</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_COPY_ITEM</property>
 			  <signal name="activate" handler="gnc_invoice_window_copy_cb"/>
 			</widget>
 		      </child>
@@ -854,8 +851,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_paste">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gtk-paste</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_PASTE_ITEM</property>
 			  <signal name="activate" handler="gnc_invoice_window_paste_cb"/>
 			</widget>
 		      </child>
@@ -894,7 +890,6 @@
 
 		  <child>
 		    <widget class="GtkMenu" id="menu_view_menu">
-		      <property name="visible">True</property>
 
 		      <child>
 			<widget class="GtkCheckMenuItem" id="menu_toolbar">
@@ -943,7 +938,6 @@
 
 			  <child>
 			    <widget class="GtkMenu" id="menu_sort_order_menu">
-			      <property name="visible">True</property>
 
 			      <child>
 				<widget class="GtkRadioMenuItem" id="menu_sort_standard">
@@ -951,7 +945,7 @@
 				  <property name="tooltip" translatable="yes">Keep normal invoice order</property>
 				  <property name="label" translatable="yes">_Standard</property>
 				  <property name="use_underline">True</property>
-				  <property name="active">False</property>
+				  <property name="active">True</property>
 				  <signal name="activate" handler="gnc_invoice_window_sort_standard_cb"/>
 				</widget>
 			      </child>
@@ -968,7 +962,7 @@
 				  <property name="tooltip" translatable="yes">Sort by date</property>
 				  <property name="label" translatable="yes">_Date</property>
 				  <property name="use_underline">True</property>
-				  <property name="active">False</property>
+				  <property name="active">True</property>
 				  <property name="group">menu_sort_standard</property>
 				  <signal name="activate" handler="gnc_invoice_window_sort_date_cb"/>
 				</widget>
@@ -980,7 +974,7 @@
 				  <property name="tooltip" translatable="yes">Sort by the date of entry</property>
 				  <property name="label" translatable="yes">Date of _Entry</property>
 				  <property name="use_underline">True</property>
-				  <property name="active">False</property>
+				  <property name="active">True</property>
 				  <property name="group">menu_sort_standard</property>
 				  <signal name="activate" handler="gnc_invoice_window_sort_date_entered_cb"/>
 				</widget>
@@ -992,7 +986,7 @@
 				  <property name="tooltip" translatable="yes">Sort by quantity</property>
 				  <property name="label" translatable="yes">_Quantity</property>
 				  <property name="use_underline">True</property>
-				  <property name="active">False</property>
+				  <property name="active">True</property>
 				  <property name="group">menu_sort_standard</property>
 				  <signal name="activate" handler="gnc_invoice_window_sort_quantity_cb"/>
 				</widget>
@@ -1004,7 +998,7 @@
 				  <property name="tooltip" translatable="yes">Sort by price</property>
 				  <property name="label" translatable="yes">_Price</property>
 				  <property name="use_underline">True</property>
-				  <property name="active">False</property>
+				  <property name="active">True</property>
 				  <property name="group">menu_sort_standard</property>
 				  <signal name="activate" handler="gnc_invoice_window_sort_price_cb"/>
 				</widget>
@@ -1038,7 +1032,6 @@
 
 		  <child>
 		    <widget class="GtkMenu" id="menu_actions_menu">
-		      <property name="visible">True</property>
 
 		      <child>
 			<widget class="GtkMenuItem" id="menu_enter">
@@ -1051,22 +1044,46 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkMenuItem" id="menu_cancel">
+			<widget class="GtkImageMenuItem" id="menu_cancel">
 			  <property name="visible">True</property>
 			  <property name="tooltip" translatable="yes">Cancel the current entry</property>
 			  <property name="label" translatable="yes">_Cancel</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="gnc_invoice_window_cancelCB"/>
+
+			  <child internal-child="image">
+			    <widget class="GtkImage" id="image3">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-cancel</property>
+			      <property name="icon_size">1</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
 			</widget>
 		      </child>
 
 		      <child>
-			<widget class="GtkMenuItem" id="menu_delete">
+			<widget class="GtkImageMenuItem" id="menu_delete">
 			  <property name="visible">True</property>
 			  <property name="tooltip" translatable="yes">Delete the current entry</property>
 			  <property name="label" translatable="yes">_Delete</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="gnc_invoice_window_deleteCB"/>
+
+			  <child internal-child="image">
+			    <widget class="GtkImage" id="image4">
+			      <property name="visible">True</property>
+			      <property name="stock">gtk-delete</property>
+			      <property name="icon_size">1</property>
+			      <property name="xalign">0.5</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			    </widget>
+			  </child>
 			</widget>
 		      </child>
 
@@ -1108,7 +1125,6 @@
 
 		  <child>
 		    <widget class="GtkMenu" id="menu_reports_menu">
-		      <property name="visible">True</property>
 
 		      <child>
 			<widget class="GtkMenuItem" id="menu_report_owner">
@@ -1132,7 +1148,6 @@
 
 		  <child>
 		    <widget class="GtkMenu" id="menu_tools_menu">
-		      <property name="visible">True</property>
 
 		      <child>
 			<widget class="GtkMenuItem" id="menu_general_ledger">
@@ -1216,7 +1231,6 @@
 
 		  <child>
 		    <widget class="GtkMenu" id="menu_help_menu">
-		      <property name="visible">True</property>
 
 		      <child>
 			<widget class="GtkMenuItem" id="menu_manual">
@@ -1245,8 +1259,7 @@
 		      <child>
 			<widget class="GtkImageMenuItem" id="menu_about">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">gnome-stock-about</property>
-			  <property name="use_underline">True</property>
+			  <property name="stock_item">GNOMEUIINFO_MENU_ABOUT_ITEM</property>
 			  <signal name="activate" handler="gnc_main_window_about_cb"/>
 			</widget>
 		      </child>
